--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "bootstrap": "v4.0.0-alpha.5",
     "jquery": "^3.2.1",
-    "vue": "^2.4.2"
+    "vue": "^2.4.2",
+    "axios": "^0.16.2"
   }
 }
