--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     "craftcms/cms": "^3.0.0-beta.10",
     "vlucas/phpdotenv": "^2.4.0",
     "roave/security-advisories": "dev-master",
-    "clubstudioltd/craft3-asset-rev": "^1.1"
+    "clubstudioltd/craft3-asset-rev": "^1.1",
+    "craftcms/element-api": "^2.4"
   },
   "config": {
     "optimize-autoloader": true
