--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Andreas Koutsoukos",
   "license": "ISC",
   "devDependencies": {
+    "axios": "^0.16.2",
     "browser-sync": "^2.18.13",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
