--- a/bower.json
+++ b/bower.json
@@ -21,13 +21,9 @@
     "test",
     "tests"
   ],
-  "dependencies": {
-    "bootstrap": "v4.0.0-alpha.5"
-  },
   "devDependencies": {
-    "bootstrap": "v4.0.0-alpha.5",
-    "jquery": "^3.2.1",
     "vue": "^2.4.2",
-    "axios": "^0.16.2"
+    "axios": "^0.16.2",
+    "prism": "^1.6.0"
   }
 }
