--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
     "vlucas/phpdotenv": "^2.4.0",
     "roave/security-advisories": "dev-master",
     "clubstudioltd/craft3-asset-rev": "^1.1",
-    "craftcms/element-api": "^2.4"
+    "craftcms/element-api": "^2.4",
+    "luwes/craft3-codemirror": "^1.0",
+    "selvinortiz/doxter": "^3.1"
   },
   "config": {
     "optimize-autoloader": true
