--- a/package.json
+++ b/package.json
@@ -2,34 +2,29 @@
   "name": "digikokki",
   "version": "1.0.0",
   "description": "Digikokki sivusto",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack-dev-server",
+    "build:prod": "webpack -p"
   },
   "author": "Andreas Koutsoukos",
   "license": "ISC",
   "devDependencies": {
-    "axios": "^0.16.2",
-    "browser-sync": "^2.18.13",
-    "browserify": "^14.4.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-inject": "^4.2.0",
-    "gulp-livereload": "^3.8.1",
-    "gulp-newer": "^1.3.0",
-    "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.2",
-    "gulp-size": "^2.1.0",
-    "gulp-sourcemaps": "^1.12.0",
-    "gulp-uglify": "^1.5.4",
-    "gulp-watch": "^4.3.11",
-    "lazypipe": "^1.0.1",
-    "node-sass": "^3.13.1",
-    "shoelace-css": "^1.0.0-beta7",
-    "wiredep": "^4.0.0"
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "import-glob": "^1.5.0",
+    "import-glob-loader": "^1.1.0",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "sass-resources-loader": "^1.3.0",
+    "style-loader": "^0.18.2",
+    "webpack": "^3.5.1",
+    "webpack-dev-server": "^2.7.1"
+  },
+  "dependencies": {
+    "vue-paginate": "^3.5.0"
   }
 }
