--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Digikokki sivusto",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack-dev-server",
+    "build": "webpack -p",
     "build:prod": "webpack -p"
   },
   "author": "Andreas Koutsoukos",
@@ -13,18 +13,20 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
-    "import-glob": "^1.5.0",
+    "file-loader": "^0.11.2",
+    "font-awesome": "^4.7.0",
     "import-glob-loader": "^1.1.0",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
-    "sass-resources-loader": "^1.3.0",
     "style-loader": "^0.18.2",
     "webpack": "^3.5.1",
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
+    "resolve-url-loader": "^2.1.0",
     "vue-paginate": "^3.5.0"
   }
 }
