--- a/package.json
+++ b/package.json
@@ -1,32 +1,38 @@
 {
-  "name": "digikokki",
+  "name": "hello-vue",
+  "description": "Digikokki webpage",
   "version": "1.0.0",
-  "description": "Digikokki sivusto",
+  "author": "Andreas Koutsoukos <andreas.koutsoukos@gmail.com>",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -p",
-    "build:prod": "webpack -p"
+    "clean": "rimraf build/*",
+    "prod": "cross-env NODE_ENV=production webpack",
+    "build": "npm run clean && npm run prod",
+    "start": "cross-env NODE_ENV=development webpack-dev-server"
   },
-  "author": "Andreas Koutsoukos",
-  "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-preset-es2015": "^6.24.1",
+
+    "axios": "^0.16.2",
+    "babel-core": "^6.0.0",
+    "babel-loader": "^6.0.0",
+    "babel-preset-env": "^1.5.1",
     "clean-webpack-plugin": "^0.1.16",
-    "css-loader": "^0.28.4",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
-    "font-awesome": "^4.7.0",
+    "cross-env": "^3.0.0",
+    "css-loader": "^0.25.0",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^0.9.0",
     "import-glob-loader": "^1.1.0",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6",
+    "node-sass": "^4.5.0",
+    "postcss-loader": "^2.0.6",
+    "prismjs-loader": "0.0.4",
+    "sass-loader": "^5.0.1",
+    "sass-resources-loader": "^1.3.0",
     "style-loader": "^0.18.2",
-    "webpack": "^3.5.1",
-    "webpack-dev-server": "^2.7.1"
-  },
-  "dependencies": {
-    "resolve-url-loader": "^2.1.0",
-    "vue-paginate": "^3.5.0"
+    "vue-loader": "^12.1.0",
+    "vue-paginate": "^3.5.0",
+    "vue-social-sharing": "^2.2.3",
+    "vue-template-compiler": "^2.3.3",
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.5"
   }
 }
