--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "author": "Andreas Koutsoukos <andreas.koutsoukos@gmail.com>",
   "private": true,
   "scripts": {
-    "clean": "rimraf build/*",
-    "prod": "cross-env NODE_ENV=production webpack",
-    "build": "npm run clean && npm run prod",
-    "start": "cross-env NODE_ENV=development webpack-dev-server"
+    "ds_store": "find . -name '.DS_Store' -type f -delete",
+    "clean": "npm run ds_store && rimraf public/build",
+    "watch": "npm run clean && WEBPACK_CONFIG_TYPE='watch' webpack --progress --colors",
+    "build": "npm run clean && WEBPACK_CONFIG_TYPE='build' webpack -p --progress --colors",
+    "launch": "npm run clean && WEBPACK_CONFIG_TYPE='launch' webpack -p --progress --colors"
   },
   "devDependencies": {
-
     "axios": "^0.16.2",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
@@ -21,6 +21,7 @@
     "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^2.30.1",
     "import-glob-loader": "^1.1.0",
     "node-sass": "^4.5.0",
     "postcss-loader": "^2.0.6",
@@ -28,11 +29,14 @@
     "sass-loader": "^5.0.1",
     "sass-resources-loader": "^1.3.0",
     "style-loader": "^0.18.2",
+    "vue": "^2.4.2",
     "vue-loader": "^12.1.0",
     "vue-paginate": "^3.5.0",
     "vue-social-sharing": "^2.2.3",
-    "vue-template-compiler": "^2.3.3",
+    "vue-template-compiler": "^2.4.2",
     "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-server": "^2.4.5",
+    "webpack-merge": "^4.1.0",
+    "webpack-notifier": "^1.5.0"
   }
 }
