--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-sass": "^4.5.0",
     "postcss-loader": "^2.0.6",
     "prismjs-loader": "0.0.4",
+    "robotstxt-webpack-plugin": "^2.0.0",
     "sass-loader": "^5.0.1",
     "sass-resources-loader": "^1.3.0",
     "style-loader": "^0.18.2",
